--- a/_config.yml
+++ b/_config.yml
@@ -85,7 +85,7 @@ sidebar-avatar: /img/image.jpeg      # use absolute URL, seeing it's used in bot
 
 # Featured Tags
 featured-tags: true                     # whether or not using Feature-Tags
-featured-condition-size: 1              # A tag will be featured if the size of it is more than this condition value
+featured-condition-size: 0              # A tag will be featured if the size of it is more than this condition value
 
 
 
@@ -101,7 +101,7 @@ page-mathjax: false
 
 
 # Friends
-friends: [
+# friends: [
     # {
     #     title: "Su",
     #     href: "http://su.gallery/"
@@ -130,4 +130,4 @@ friends: [
     #     title: "尹峰以为",
     #     href: "http://ingf.github.io/"
     # }
-]
+# ]
